# HomeProtector

./: .env  README.MD  bluescan  bluetooth_security_scan_2026-04-20_17-02-21.json  config.py  docker-compose.yml  llm.py  main.py  parser.py  pyproject.toml
app/: config.py  db.py  llm.py  main.py  models.py  parser.py
scheduler/: broker.py
scheduler/tasks/: blue_tasks.py
