[project]
name = "homeprotector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-template>=0.4.4",
    "pep8>=1.7.1",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
]
